--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 nltk==3.7
-contractions=2.0.1
-re=3.10.4
-beautifulsoup4=4.10.0
+contractions==2.0.1
+re==3.10.4
+beautifulsoup4==4.10.0
 pickle
 pandas
 sklearn
