--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 nltk==3.7
-contractions
+contractions==2.0.1
 re
-beautifulsoup4
+beautifulsoup4==4.10.0
 pickle
-pandas
-sklearn
-gensim
+pandas==1.4.2
+gensim==4.1.2
